fixed horizontal scroll problem

--- a/assets/css/cc/theme.less
+++ b/assets/css/cc/theme.less
@@ -696,8 +696,9 @@ a.cc_workflow__btn:hover, a.cc_workflow__btn:focus{
                    0 -5px 3px -3px fade(@black, 20%) inset;
 }
 
-.cc_compatibility_head {
+.cc_compatibility .cc_compatibility_head {
   margin-left: 31%;
+  width: 69%;
 }
 
 .cc_main .cc_compatibility_head_text {
